<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pills">

    <fragment
        android:id="@+id/navigation_pills"
        android:name="com.happypills.ui.pills.PillsFragment"
        android:label="@string/title_pills"
        tools:layout="@layout/fragment_pills" >
        <action
            android:id="@+id/action_navigation_pills_to_addPillFragment"
            app:destination="@id/addPillFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_doctors"
        android:name="com.happypills.ui.doctors.DoctorsFragment"
        android:label="@string/title_doctors"
        tools:layout="@layout/fragment_doctors" >
        <action
            android:id="@+id/action_navigation_doctors_to_addDoctorFragment"
            app:destination="@id/addDoctorFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stores"
        android:name="com.happypills.ui.stores.StoresFragment"
        android:label="@string/title_stores"
        tools:layout="@layout/fragment_stores" />

    <fragment
        android:id="@+id/addPillFragment"
        android:name="com.happypills.ui.pills.addpill.AddPillFragment"
        android:label="fragment_add_pill"
        tools:layout="@layout/fragment_add_pill" />
    <fragment
        android:id="@+id/addDoctorFragment"
        android:name="com.happypills.ui.doctors.adddoctor.AddDoctorFragment"
        android:label="fragment_add_doctor"
        tools:layout="@layout/fragment_add_doctor" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.happypills.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>